# Music-Cleanup

./: .gitignore  README.md  pyproject.toml
src/music_cleanup/: cli.py  enrichment.py  exporters.py  metadata.py  metrics.py  models.py  organizer.py  scanner.py
src/music_cleanup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
